# ServoVisionObjectRecognition

./: CMakeLists.txt  CMakeLists.txt~  README.md
src/: CMakeLists.txt  CMakeLists.txt~  ServoVisionObjectRecognitionConfig.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt~
src/Components/DiodRecognition/: CMakeLists.txt  DiodRecognition.cpp  DiodRecognition.hpp
src/Components/DrawDiods/: CMakeLists.txt  DrawDiods.cpp  DrawDiods.hpp
src/Components/HomogMatrixPub/: CMakeLists.txt  HomogMatrixPub.cpp  HomogMatrixPub.hpp  wyniki2.txt
src/Components/NewestImage/: CMakeLists.txt  NewestImage.cpp  NewestImage.hpp
src/Components/ROSProxy/: CMakeLists.txt  CMakeLists.txt~  ROSProxy.cpp  ROSProxy.hpp
src/Components/TimeCount/: CMakeLists.txt  TimeCount.cpp  TimeCount.hpp
src/Components/archiwum/: redme
src/Components/archiwum/CvFindChessboardCorners/: CvFindChessboardCorners_Processor.cpp  CvFindChessboardCorners_Processor.cpp~  CvFindChessboardCorners_Processor.hpp  (+1 more)
src/Types/: CMakeLists.txt
tasks/: diod.xml  liczenie_macierzy_publikacja_kropki_ros3.xml  liczenie_macierzy_publikacja_warcaby.xml  liczenie_macierzy_publikacja_warcaby3.xml  wykrywanie_4_diod (kopia).xml~  wykrywanie_4_diod.xml  wykrywanie_4_diod.xml~  wykrywanie_4_diod2.xml  wykrywanie_4_diod3.xml  wykrywanie_4_diod4.xml
tasks/inne/: liczenie_macierzy_publikacja_warcaby.xml  liczenie_macierzy_publikacja_warcaby3.xml  wykrywanie_4_diod.xml  wykrywanie_4_diod4 (kopia).xml
zdjecia/zdjecia1/: T_DC(szach).txt  readme
zdjecia/zdjecia2/: T_DC(szachownica).txt
(+4 files in other folders)
